# rust-crc32fast

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: bench.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: hasher.rs
fuzz/src/: main.rs
src/: baseline.rs  combine.rs  lib.rs  pclmulqdq.rs
src/specialized/: aarch64.rs  mod.rs  pclmulqdq.rs
tests/: exhaustive.rs
