[package]
name = "crc32fast"
version = "1.2.1"
license = "MIT OR Apache-2.0"
authors = [
  "Sam Rijs <srijs@airpost.net>",
  "Alex Crichton <alex@alexcrichton.com>"
]
description = "Fast, SIMD-accelerated CRC32 (IEEE) checksum computation"
repository = "https://github.com/srijs/rust-crc32fast"
readme = "README.md"
keywords = ["checksum", "crc", "crc32", "simd", "fast"]

[dependencies]
cfg-if = "1.0"

[dev-dependencies]
bencher = "0.1"
quickcheck = { version = "0.9", default-features = false }
rand = "0.7"

[features]
default = ["std"]
std = []
nightly = []

[[bench]]
name = "bench"
harness = false
