[package]
name = "crc32fast"
version = "1.4.2"
license = "MIT OR Apache-2.0"
authors = [
  "Sam Rijs <srijs@airpost.net>",
  "Alex Crichton <alex@alexcrichton.com>"
]
description = "Fast, SIMD-accelerated CRC32 (IEEE) checksum computation"
repository = "https://github.com/srijs/rust-crc32fast"
readme = "README.md"
keywords = ["hash", "crc", "crc32", "simd", "fast"]
categories = ["algorithms", "no-std"]

[dependencies]
cfg-if = "1.0"

[dev-dependencies]
bencher = "0.1"
crc32-v2 = "0.0.5"
quickcheck = { version = "1.0", default-features = false }
rand = "0.8"

[features]
default = ["std"]
std = []
nightly = []

[[bench]]
name = "bench"
harness = false
